<resources>
    <string name="app_name">Recipees</string>

    <string name="favourites">Favourites</string>
    <string name="browse">Browse all</string>
    <string name="new_recipe">New recipe</string>
    <string name="add_recipe">Add recipe</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="save_recipe">Save</string>
    <string name="ingredient_text">Ingredient name</string>
    <string name="clear_all">Clear all</string>
    <string name="cleared_all">Cleared all ingredients</string>
    <string name="search">Search</string>
    <string name="default_name">Name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="help">Help</string>
    <string name="delete">Delete</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="delete_popup">Are you sure you want to delete this recipe?</string>
    <string name="delete_selected">Delete selected</string>
    <string name="select_all">Select all</string>
    <string name="clear_selection">Clear selection</string>
    <string name="default_description">Put your description here...</string>
    <string name="about_me">About me</string>
    <string name="change_colors">Change app colors</string>
    <string name="night_mode">Night mode</string>
    <string name="remove_from_favourites">Remove from favourites</string>
    <string name="back">Back</string>
    <string name="temp_description">Recipe\'s description</string>
    <string name="enter_name">Enter recipe\'s name:</string>
    <string-array name="measurements">
        <item>grams</item>
        <item>spoons</item>
        <item>cups</item>
        <item>grains</item>
        <item>drops</item>
    </string-array>
    <string name="help_contents">One can find help in one\'s journeys throughout the Recipes app here...</string>
    <string name="gyroscroll">GyroScroll</string>
    <string name="proxifling">ProxiFling</string>
</resources>
