<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Recipes" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:tabGravity="fill"
        app:tabMaxWidth="0dp"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@android:color/white">

        <android.support.design.widget.TabItem
            android:id="@+id/tab_favourites"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag='"FAVOURITES"'
            android:text="@string/favourites" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_browse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag='"BROWSE"'
            android:text="@string/browse" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_new_recipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag='"NEW"'
            android:text="@string/new_recipe" />
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="645dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

</android.support.constraint.ConstraintLayout>